Fixed some letter spacing

--- a/BlogExercise/blogStyle.css
+++ b/BlogExercise/blogStyle.css
@@ -28,7 +28,7 @@
   font-family: 'Source Sans Pro', sans-serif;
   padding-top: 0;
   color: #3498db;
-  letter-spacing: 3px;
+  letter-spacing: 0.2rem;
   font-weight: bold;
   text-transform: uppercase;
 }
